# msgpack-class

./: LICENSE  README.md  main.py  pyproject.toml  schema.proto  schema_pb2.py  size_comp.py  test_benchmark.py  test_main.py
