[tool.poetry]
name = "msgpack-class"
version = "0.1.0"
description = "PoC of serializing a class with msgpack"
authors = ["Piotr Zakrzewski <1050269+PiotrZakrzewski@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pylint = "^2.10.2"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
